fixed color scheme and dark mode

--- a/CSS/light.css
+++ b/CSS/light.css
@@ -2,16 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;700&display=swap');
 
 :root{
-    --color-accent-400: rgb(178, 6, 0);
-    --color-accent-100: rgb(255, 95, 0);
+    --color-accent-400: rgb(250,8,67);
+    --color-accent-100: rgb(153,3,40);
 
     --color-primary-400: rgb(0, 9, 44);
 
     --color-neutral-400: rgb(238, 238, 238);
     --color-neutral-100: rgb(255, 255, 255);
 
-    --color-toggle-light: rgb(255, 95, 0);
-    --color-toggle-dark: rgb(44, 44, 44);
+    --color-toggle-light: rgb(250,8,67);
+    --color-toggle-dark:  rgb(29, 29, 29);
     --color-toggle-circle: rgb(255, 255, 255);
 
     --font-family-primary: 'Be Vietnam Pro', sans-serif;
@@ -44,7 +44,6 @@
 }
 
 *, *::before, *::after{
-    background-color: #ffffff00;
     box-sizing: border-box;
 }
 
@@ -95,6 +94,7 @@ body{
 .top-container{
     /* Styling */
     background-color: var(--color-neutral-100);
+    box-shadow: rgba(0, 0, 0, 0.13) 0px 48px 100px 0px;
 
     /* Positioning */
     z-index: 1;
@@ -224,6 +224,7 @@ input:checked + .slider:before {
     /* Styling */
     text-align: center;
     background-color: var(--color-neutral-100);
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
     
     /* Positioning */
     max-width: 750px;
@@ -275,6 +276,7 @@ input:checked + .slider:before {
     /* Styling */
     text-align: center;
     background-color: var(--color-neutral-100);
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 
     /* Positioning */
     z-index: -1;
@@ -310,10 +312,19 @@ input:checked + .slider:before {
 
     /* Positioning */
     padding: 20px 0px;
+
+    /* Annimating */
+    transition: all 0.5s ease-in-out;
+}
+
+.about-me-info-element-body:hover{
+    /* Styling */
+    color: var(--color-accent-100);
 }
 
 .about-me-info-element:hover{
     /* Annimating */
+    color: var(--color-accent-100);
     transform: scale(1.1);
 }
 
